--- a/modules/task_2/rustamov_a_histogram_stretch/CMakeLists.txt
+++ b/modules/task_2/rustamov_a_histogram_stretch/CMakeLists.txt
@@ -5,6 +5,9 @@ if ( USE_OMP )
     project( ${ProjectId} )
     message( STATUS "-- " ${ProjectId} )
 
+    find_package( OpenCV REQUIRED )
+	include_directories( ${OpenCV_INCLUDE_DIRS} )
+
     file(GLOB_RECURSE ALL_SOURCE_FILES *.cpp *.h)
 
     set(PACK_LIB "${ProjectId}_lib")
@@ -14,6 +17,7 @@ if ( USE_OMP )
 
     target_link_libraries(${ProjectId} ${PACK_LIB})
     target_link_libraries(${ProjectId} gtest gtest_main)
+    target_link_libraries(${ProjectId} ${OpenCV_LIBS})
 
     enable_testing()
     add_test(NAME ${ProjectId} COMMAND ${ProjectId})
